--- a/css-backup/home.css
+++ b/css-backup/home.css
@@ -1,39 +1,8 @@
-/* .header{
-    background-color: crimson;
-    height:60px;
-    width: 100%;
-    color: white;
-    justify-content: center;
-    float: left;
-    padding-top: 10px;o
-    padding-bottom: 50px;
-}
-.header img{
-    height: 50px;
-    width: 100px;
-    padding-top: 15px;
-    
-}
-.header ul{
-    display:flex;
-  justify-content: center;
-
-  
- 
-     
-}
-.header ul li{
-    padding-left: 15px;
-    padding-right: 15px;
-   justify-content: center;
-      
-} */
-
 .page-base{
     width: 1110px;
-    justify-content: space-evenly;
-    padding-left: 100px;
-}
+    position: relative;
+    left: calc((100% - 1110px) / 2);
+}   
 
 header{
     background-color: crimson;
@@ -74,6 +43,7 @@ footer{
     display: flex;
     height: 100%;
     align-items: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 .right ul li{
     padding-right: 10px;
@@ -91,7 +61,9 @@ footer{
     transition: 0.5s;
     opacity: 0;
     z-index: 1;
-    box-shadow: 0 0 48px 3px #0000008f
+    box-shadow: 0 0 48px 3px #0000008f;
+    
+    
 }
 .right li .dropshow{
     height: 200px;
@@ -128,12 +100,13 @@ div button{
 .tab-click{
     height: auto;
     width: 100%;
-    float: left;
+    float: left;   
 }
  .tab-click div{
     float: left;
     font-size: larger;
    display: block;
+   
 }
 .activeb{
     background-color: brown;
@@ -183,6 +156,9 @@ section a {
      width: 100%;
 
  }
+ .im{
+     font-family: inherit;
+ }
 
 
  .here img{
@@ -194,6 +170,11 @@ section a {
      text-align: center;
      float: left;
      width: 100%;
+ }
+ .container img{
+     border-radius: 50%;
+     box-shadow: 2px 2px 3px grey;
+     width: 100px;
  }
   .s3 .plugin{
      padding-top: 20px;
@@ -214,34 +195,170 @@ section.promo{
   width: 100%;
   height: auto;
 }
-.page-base h2{
+.promo h2{
     color: brown;
     font-size: 30px;
     padding-top: 40px;
-}
-.promo{
-    padding-left: 10px;
-    padding-right: 10px;
+    font-family: inherit;
 }
 
 .base1 {
     padding-top: 50px;
     display: flex;
     justify-content: space-between;
+    padding-bottom: 20px;
 }
 .promo  .base1 div{
     border:1px solid rgb(194, 18, 18);
     border-radius: 5px;
    float: left;
    justify-content: space-between;
+   position: relative;
+   
    
    
    
 }
 .base1 div{
-    height:150px;
+    height: auto;
     width: 350px;
     background-color: white;
+    
+}
+ .sp h2{
+     font-size: 18px;
+     color: black;
+     font-weight: bold;
+     padding-top: 10px;
+     padding-left: 5px;
+ }
+.sp span{
+    display:flex;
+    padding-left: 10px;
+    padding-top: 12px;
+    position: relative;
+   
+ 
+}
+.sp .s1{
+    font-weight: bold;
+}
+.sp .s2{
+    font-weight: bolder;
+    font-size: 30px;
+    color: brown;
+}
+.sp .s3{
+    font-weight: bold;
+}
+.sp img{
+   
+    position: absolute;
+    right: 10px;
+    top: calc((100% - 40%)/2);
+    height: 30px;
+    width:55px
+}
+
+    .sp2 h2{
+        font-size: 18px;
+        color: black;
+        font-weight: bold;
+        padding-top: 10px;
+        padding-left: 5px;
+      
+    }
+   .sp2 span{
+       display:flex;
+       padding-left: 10px;
+       padding-top: 12px;
+       position: relative;
+      
+    
+   }
+   .sp2 .a1{
+       font-weight: bold;
+   }
+   .sp2 .a2{
+       font-weight: bolder;
+       font-size: 30px;
+       color: brown;
+   }
+   .sp2 .a3{
+       font-weight: bold;
+   }
+   .sp2 img{
+   
+    position: absolute;
+    right: 10px;
+    top: calc((100% - 40%)/2);
+    height: 30px;
+    width:55px
+}
+
+.sp3 h2{
+    font-size: 18px;
+    color: black;
+    font-weight: bold;
+    padding-top: 10px;
+    padding-left: 5px;
+  
+}
+.sp3 span{
+    display:flex;
+    padding-left: 10px;
+    padding-top: 12px;
+    position: relative;
+   
+ 
+}
+.sp3 .b1{
+    font-weight: bold;
+}
+.sp3 .b2{
+    font-weight: bolder;
+    font-size: 30px;
+    color: brown;
+}
+.sp3 .b3{
+    font-weight: bold;
+}
+.sp3 img{
+
+ position: absolute;
+ right: 10px;
+ top: calc((100% - 40%)/2);
+ height: 30px;
+ width:55px
+}
+
+.promo button{
+    background-color: orange;
+    color: white;
+    width: 250px;
+    border-radius: 2px;
+    border: 1px solid orange;
+    position: relative;
+    padding: 10px 75px;
+    left:calc((100% - 231px)/2);
+   
+}
+.Rec h2{
+    color: brown;
+    font-size: 30px;
+    font-family: inherit;
+    
+}
+.max img{
+    height: auto;
+    width: 350px;
+    float: left;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+.max span{
+    color: brown;
     
 }
 
@@ -249,29 +366,4 @@ section.promo{
 
 
 
- /* section a #{
-    padding-bottom: 20px;
-    padding-bottom: 20px;
- } */
- /* .dp:hover .dropdown{
-    background-color: #3e8e41;
- }
- .dropdown:hover{
-     display: block;
- }
- .dropdown a:hover {background-color: #f1f1f1}
 
- .dropdown a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-  }
-  .dp{
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-  } */
